* TeX::Encode >= 2.007
* Authen::SASL (new)
* Cookie::Baker (new)
* Email::Sender (new)
* Email::Stuffer (new)
* Session::Storage::Secure (new)
* String::Random (new)
* MIME::Lite (dropped)
* PGObject >= 2.0.2 (from 1.403.2)
* PGObject::Type::BigFloat >= 2.0.1 (from 1.0.0)
* PGObject::Type::DateTime >= 2.0.2 (from 1.0.4)
* PGObject::Type::ByteString >= 1.2.3 (from 1.1.1)


Changelog for 1.7 Series
2019-10-04

Changelog for 1.7.12 (to be released)
* Reconciliation reports list now shows usernames rather than user ids (#4388)


Changelog for 1.7.11
* Fix inventory adjustments failing to update balances (#4467)
* Fix inability to delete individual vouchers from a batch (#4448)


Changelog for 1.7.10
* Fix error displaying NULL exchange rates (#4438)
* Fix incorrect receipt totals due to number formatting (#4441)
* Prevent re-approval of approved inventory adjustment (#4458)
* Fix NULL transaction dates in inventory adjustment (#4463)
* Fix alignment of numbers in Inventory Activity report (#4454)
* Fix variance calculation on reconciliation report (#4486)
* Fix CSV import through explicit version on HTTP::Headers::Fast dependency


Changelog for 1.7.9
* Fix authentication issue due to inconsistent cookie handling (#4380)
* Fix delete access for SIC codes (standard industry code) (#4391)
* Fix SL 3.0 migration of assemblies (#4386)


Changelog for 1.7.8
* Upgrade Dojo dependency to 1.15.1
* Load the template from the database when printing receipts
* Prevent dead-locks in response to request from timed out session
* Add monetary formatting to payments/receipts screen and report


Changelog for 1.7.7
* Fix currency column not being available in the parts screen


Changelog for 1.7.6
* Disallow rate entry for the default currency (#4236)
* Fix formatting on-hand (OH) column on orders to follow user settings (#3334)
* Fix UI translation other than the menu, regressed from 1.6 (#4293)
* Fix missing 'Entered At' date in contact notes (#2822)